
  [ Adam D. Barratt ]
  * checkbashisms: Fix a variable redeclaration warning. Thanks,
    Neutron Soutmun. (Closes: #506975)
  * debi: Add an "upgrade" option indicating that only those packages
    already installed on the system should be installed, rather than
    all packages listed in the .changes file. Thanks, Colin Watson.
    (Closes: #506663)

  [ Christoph Berg ]
  * rmadison: Add debug.debian.net.

 -- Christoph Berg <myon@debian.org>  Thu, 20 Nov 2008 13:23:19 +0100

devscripts (2.10.41) unstable; urgency=low

  [ Patrick Schoenfeld ]
  * build-rdeps:
    + Make default pattern for source files match on codename
      as well as suite (unstable, sid)
    + Add a --exclude-component parameter which can be specified
      multiple times to exclude certain components (e.g. main, contrib,
      non-free).
    + Add missing documentation of the --only-main param in
      the manpage
    + Update author email address

  [ Adam D. Barratt ]
  * bts:
    + Don't attempt to iterate the list of bugs returned by "bts status"
      if it's empty, thereby avoiding a "Can't use string ("") as a HASH
      ref" error.
    + Correctly handle only one argument being passed to "block" or
      "unblock".
  * checkbashisms:
    + Add an updated check for $'' which is much less prone to false
      positives. Thanks Filippo Giunchedi. (Closes: #504292)
    + Add an updated check for $"" based on Filippo's $'' patch.
  * dcmd: Allow only a subset of the files listed in the .changes / .dsc
    file to be selected. (Closes: #481415)
  * Debbugs.pm:
    + Really fix the special-casing of the "archive" key in select() to
      get rid of an uninitialized value warning.
    + Check whether a SOAP call returned a valid value before attempting to
      call result() on it.
    + Produce more useful error messages on failure. (Closes: #496013)
  * debdiff: When comparing source packages, do so in version order rather